tests/transpiler/x/clj/list_nested_assign.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:45Z
(ns main)
(def matrix [[1 2] [3 4]])
(defn -main [] (set! matrix 5) (println (nth (nth matrix 1) 0)))
(-main)
